Fixed layout issues

--- a/src/styles/Slider.css
+++ b/src/styles/Slider.css
@@ -25,7 +25,7 @@
 .slider-left-value,
 .slider-right-value {
   font-size: 16px;
-  margin-top: 12px;
+  margin-top: 14px;
 }
 
 .slider-left-value {
